--- a/docker_folder/Dockerfile
+++ b/docker_folder/Dockerfile
@@ -24,10 +24,7 @@ RUN sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) 
 RUN curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
 RUN sudo apt update
 RUN sudo apt install -y ros-noetic-desktop-full
-
-# GS-ICP SLAM
 WORKDIR /home
-RUN git clone --recursive https://github.com/Lab-of-AI-and-Robotics/GS_ICP_SLAM.git
 
 ## Dependency
 RUN echo "export CUDA_HOME=/usr/local/cuda && export PATH=/usr/local/cuda-11.8/bin:$PATH && LD_LIBRARY_PATH=/usr/local/cuda-11.8/lib64:/lib64:$LD_LIBRARY_PATH" >> ~/.bashrc
@@ -38,22 +35,10 @@ RUN sudo apt-get install -y ninja-build
 RUN pip3 install --upgrade pip
 RUN pip3.9 install open3d --ignore-installed PyYAML
 
-## fast_gicp
-WORKDIR /home/GS_ICP_SLAM
-WORKDIR /home/GS_ICP_SLAM/submodules/fast_gicp
-RUN mkdir build
-WORKDIR /home/GS_ICP_SLAM/submodules/fast_gicp/build
-RUN cmake ..
-RUN make -j4
-WORKDIR /home/GS_ICP_SLAM/submodules/fast_gicp
-RUN python setup.py install --user
-
-# RUN pip install submodules/diff-gaussian-rasterization
-# RUN pip install submodules/simple-knn
-
 ## Viewer
 ### Dependency
-RUN sudo apt install -y libglew-dev libgtk-3-dev libassimp-dev libglfw3-dev libavdevice-dev libxxf86vm-dev
+RUN apt-get update && apt-get install -y libglew-dev libgtk-3-dev libassimp-dev libglfw3-dev \
+    libavdevice-dev libxxf86vm-dev libgtk-3-dev libxkbcommon-x11-0 vulkan-tools
 #### opencv (ver 4.5 required)
 RUN sudo apt-get install -y libjpeg-dev libtiff5-dev libpng-dev \
                         libavcodec-dev libavformat-dev libswscale-dev libxvidcore-dev libx264-dev libxine2-dev \
@@ -86,7 +71,7 @@ RUN cmake -D EMBREE_ISPC_SUPPORT=False ..
 RUN make -j4
 RUN sudo make install
 
-### build / install
-WORKDIR /home/GS_ICP_SLAM/SIBR_viewers
-RUN cmake -Bbuild . -DCMAKE_BUILD_TYPE=Release
-RUN cmake --build build -j4 --target install
+#### rerun
+RUN pip install rerun-sdk
+
+WORKDIR /home/GS_ICP_SLAM
